kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    haproxy.org/rewrite-target: "/"
    ingress.kubernetes.io/auth-realm: kibaana.example.com
    ingress.kubernetes.io/auth-secret: john::admin
    ingress.kubernetes.io/auth-type: basic
  name: kibana-ingress
spec:
  rules:
  - host: kibana.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-svc
            port:
              number: 5601
  tls:
  - secretName: example-cert
    hosts:
    - kibana.example.com
